// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Custom Class Names and Styling 1`] = `
<DocumentFragment>
  <div
    class="Grid-grid customClassName"
    style="background-color: purple;"
  >
    <div
      class="Grid-gridSpan3"
    >
      <div
        style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
      />
      <div
        style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
      />
      <div
        style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
      />
      <div
        style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid Grid Position Center 1`] = `
<DocumentFragment>
  <div
    class="Grid-grid Grid-positionCenter"
    style="width: 60%;"
  >
    <div
      class="Grid-gridSpan3"
    >
      <div
        style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
      />
      <div
        style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
      />
      <div
        style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
      />
      <div
        style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid Grid Position Right 1`] = `
<DocumentFragment>
  <div
    class="Grid-grid Grid-positionRight"
    style="width: 60%;"
  >
    <div
      class="Grid-gridSpan3"
    >
      <div
        style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
      />
      <div
        style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
      />
      <div
        style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
      />
      <div
        style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid Renders Children 1`] = `
<DocumentFragment>
  <div
    class="Grid-grid"
  >
    <div
      class="Grid-gridSpan3"
    >
      <div
        style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
      />
      <div
        style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
      />
      <div
        style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
      />
      <div
        style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid Renders Children with custom layout data 1`] = `
<DocumentFragment>
  <div
    class="Grid-grid"
  >
    <div
      class="Grid-gridSpan12"
    >
      <div
        data-layout-span="XL12 L12 M12 S12"
        style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
      />
    </div>
    <span
      class="Grid-gridSpan1"
    />
    <div
      class="Grid-gridSpan3"
    >
      <div
        data-layout-indent="XL1 L1 M1 S1"
        style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
      />
    </div>
  </div>
</DocumentFragment>
`;
